--- a/index.html
+++ b/index.html
@@ -1,98 +1,224 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProActive club</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-custom">
-  <div class="container">
-    
-    <a class="navbar-brand" href="#">
-      <span class=" brand-primary">ProActive</span> club
-    </a>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-custom">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <span class="brand-primary">ProActive</span> club
+        </a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      
-      <ul class="navbar-nav ms-auto align-items-center gap-lg-4">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto align-items-center gap-lg-4">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+              >
+                Ropa Deportiva
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Mujeres</a></li>
+                <li><a class="dropdown-item" href="#">Hombres</a></li>
+                <li><a class="dropdown-item" href="#">Accesorios</a></li>
+              </ul>
+            </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button"
-             data-bs-toggle="dropdown">
-            Ropa Deportiva
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Mujeres</a></li>
-            <li><a class="dropdown-item" href="#">Hombres</a></li>
-            <li><a class="dropdown-item" href="#">Accesorios</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Únete al Club</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Social</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="icon-btn" href="#">
+                <i class="bi bi-bag"></i>
+              </a>
+            </li>
           </ul>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Únete al Club</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Social</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="icon-btn" href="#">
-            <i class="bi bi-bag"></i>
-          </a>
-        </li>
-
-      </ul>
-    </div>
-  </div>
-</nav>
-<!--Inicio de hero section-->
-<section class="hero">
-  <div class="container">
-    <div class="row align-items-center gy-5">
-
-      <!-- COLUMNA TEXTO -->
-      <div class="col-lg-6">
-        <h1 class="hero-title">
-          Transforma tu vida con <span class="brand-primary">ProActive</span> club
-        </h1>
-
-        <p class="hero-text">
-          Accede a entrenamientos personalizados, nutrición profesional
-          y una comunidad que te impulsa a alcanzar tus metas.
-        </p>
-
-        <div class="hero-actions">
-          <a href="#" class="btn-primary-custom">Ver planes</a>
-          <a href="#" class="btn-outline-custom">Tienda</a>
         </div>
       </div>
+    </nav>
+    <!--Inicio de hero section-->
+    <section class="hero">
+      <div class="container">
+        <div class="row align-items-center gy-5">
+          <!-- COLUMNA TEXTO -->
+          <div class="col-lg-6">
+            <h1 class="hero-title">
+              Transforma tu vida con
+              <span class="brand-primary">ProActive</span> club
+            </h1>
 
-      <div class="col-lg-6 text-center">
-        <img
-          src="./Recursos/entrenamiento.jpeg"
-          alt="Entrenamiento deportivo"
-          class="hero-img img-fluid"
-         width="500px"> 
+            <p class="hero-text">
+              Accede a entrenamientos personalizados, nutrición profesional y
+              una comunidad que te impulsa a alcanzar tus metas.
+            </p>
+
+            <div class="hero-actions">
+              <a href="#" class="btn-primary-custom">Ver planes</a>
+              <a href="#" class="btn-outline-custom">Tienda</a>
+            </div>
+          </div>
+
+          <div class="col-lg-6 text-center">
+            <img
+              src="./Recursos/entrenamiento.jpeg"
+              alt="Entrenamiento deportivo"
+              class="hero-img img-fluid"
+              width="500px"
+            />
+          </div>
+        </div>
       </div>
+    </section>
 
-    </div>
-  </div>
-</section>
+    <!--PLANES DE SUBSCRIPCIÓN INICIO-->
+    <section class="pricing-section">
+      <h1 class="pricing-title">Únete al Club</h1>
+      <p class="pricing-subtitle">
+        Elige el plan que se adapte a tus necesidades y comienza tu
+        transformación hoy
+      </p>
 
+      <div class="pricing-grid">
+        <div class="pricing-card">
+          <h2 class="pricing-card-title">Plan Nutrición</h2>
+          <p class="pricing-card-subtitle">
+            Alimentación personalizada para tus objetivos
+          </p>
+          <div>
+            <span class="pricing-amount">$29</span>
+            <span class="pricing-period">/ mes</span>
+          </div>
+          <p class="pricing-features-title">Incluye:</p>
+          <ul class="pricing-features-list">
+            <li>Plan nutricional personalizado</li>
+            <li>Seguimiento mensual</li>
+            <li>Recetas adaptadas</li>
+            <li>Ajustes según progreso</li>
+          </ul>
+          <p class="pricing-features-title">Beneficios adicionales:</p>
+          <ul class="pricing-features-list">
+            <li>10% descuento en artículos de la tienda*</li>
+          </ul>
+          <button class="pricing-btn pricing-btn-outline">
+            Seleccionar Plan
+          </button>
+        </div>
 
+        <div class="pricing-card">
+          <h2 class="pricing-card-title">Plan Entrenamiento</h2>
+          <p class="pricing-card-subtitle">Rutinas diseñadas por expertos</p>
+          <div>
+            <span class="pricing-amount">$39</span>
+            <span class="pricing-period">/ mes</span>
+          </div>
+          <p class="pricing-features-title">Incluye:</p>
+          <ul class="pricing-features-list">
+            <li>Rutinas personalizadas</li>
+            <li>Videos explicativos</li>
+            <li>Seguimiento de progreso</li>
+            <li>Acceso a entrenadores</li>
+          </ul>
+          <p class="pricing-features-title">Beneficios adicionales:</p>
+          <ul class="pricing-features-list">
+            <li>10% descuento en artículos de la tienda*</li>
+          </ul>
+          <button class="pricing-btn pricing-btn-outline">
+            Seleccionar Plan
+          </button>
+        </div>
 
+        <div class="pricing-card popular">
+          <div class="popular-badge">⭐ Más Popular</div>
+          <h2 class="pricing-card-title">Plan Completo</h2>
+          <p class="pricing-card-subtitle">Nutrición + Entrenamiento</p>
+          <div>
+            <span class="pricing-amount">$59</span>
+            <span class="pricing-period">/ mes</span>
+          </div>
+          <p class="pricing-features-title">Incluye:</p>
+          <ul class="pricing-features-list">
+            <li>Todo de Plan Nutrición</li>
+            <li>Todo de Plan Entrenamiento</li>
+            <li>Seguimiento integrado</li>
+            <li>Consultas prioritarias</li>
+          </ul>
+          <p class="pricing-features-title">Beneficios adicionales:</p>
+          <ul class="pricing-features-list">
+            <li>10% descuento en artículos de la tienda*</li>
+          </ul>
+          <button class="pricing-btn pricing-btn-primary">
+            Seleccionar Plan
+          </button>
+        </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>    
-</body>
+        <div class="pricing-card">
+          <h2 class="pricing-card-title">Plan Elite</h2>
+          <p class="pricing-card-subtitle">
+            Experiencia completa con instalaciones
+          </p>
+          <div>
+            <span class="pricing-amount">$89</span>
+            <span class="pricing-period">/ mes</span>
+          </div>
+          <p class="pricing-features-title">Incluye:</p>
+          <ul class="pricing-features-list">
+            <li>Todo de Plan Completo</li>
+            <li>Membresía al gimnasio</li>
+            <li>Acceso a fisioterapeuta</li>
+            <li>Clases grupales ilimitadas</li>
+            <li>Zona de spa y recuperación</li>
+          </ul>
+          <p class="pricing-features-title">Beneficios adicionales:</p>
+          <ul class="pricing-features-list">
+            <li>10% descuento en artículos de la tienda*</li>
+          </ul>
+          <button class="pricing-btn pricing-btn-outline">
+            Seleccionar Plan
+          </button>
+        </div>
+      </div>
+    </section>
+    <!--PLANES DE SUBSCRIPCIÓN FIN-->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
