--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
@@ -60,8 +61,6 @@
 <section class="hero">
   <div class="container">
     <div class="row align-items-center gy-5">
-
-      <!-- COLUMNA TEXTO -->
       <div class="col-lg-6">
         <h1 class="hero-title">
           Transforma tu vida con <span class="brand-primary">ProActive</span> club
@@ -92,6 +91,60 @@
 
 
 
+<!--INICIO FOOTER-->
+</section>
+
+<footer class="footer">
+  <div class="container footer-content">
+
+    <div class="footer-info">
+      <div class="logo">
+        <span class="brand-primary">ProActive</span> club
+      </div>
+      <p>Tu acompañante en el camino hacia una vida más saludable y activa.</p>
+    </div>
+
+    <div class="tienda">
+      <h6>Tienda</h6>
+      <ul>
+        <li>Mujeres</li>
+        <li>Hombres</li>
+        <li>Accesorios</li>
+      </ul>
+    </div>
+
+    <div class="club">
+      <h6>Club</h6>
+      <ul>
+        <li>Planes y Precios</li>
+        <li>Entrenadores</li>
+        <li>Nutricionista</li>
+        <li>Fisioterapias</li>
+        <li>Preguntas frecuentes</li>
+      </ul>
+    </div>
+
+    <!-- 🔹 BLOQUE CORRECTO DE REDES + CONTACTO -->
+    <div class="footer-social">
+      <h6>Síguenos</h6>
+
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
+
+      <div class="contact-info">
+        <p>contacto@proactiveclub.com</p>
+        <p>01 800 456 789</p>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; <span class="brand-primary">ProActive</span> club. Todos los derechos
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>    
 </body>
