--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="col-lg-6 text-center">
             <img
-              src="./Recursos/entrenamiento.jpeg"
+              src="./Recursos/entrenamiento.jpg"
               alt="Entrenamiento deportivo"
               class="hero-img img-fluid"
               width="500px"
@@ -437,6 +437,58 @@
     </div>
 </div>
 <!--Fin de opniniones section-->
+
+<!--INICIO FOOTER-->
+</section>
+
+<footer class="footer">
+  <div class="container footer-content">
+
+    <div class="footer-info">
+      <div class="logo">
+        <span class="brand-primary">ProActive</span> club
+      </div>
+      <p>Tu acompañante en el camino hacia una vida más saludable y activa.</p>
+    </div>
+
+    <div class="tienda">
+      <h6>Tienda</h6>
+      <ul>
+        <li>Mujeres</li>
+        <li>Hombres</li>
+        <li>Accesorios</li>
+      </ul>
+    </div>
+
+    <div class="club">
+      <h6>Club</h6>
+      <ul>
+        <li>Planes y Precios</li>
+        <li>Entrenadores</li>
+        <li>Nutricionista</li>
+        <li>Fisioterapias</li>
+        <li>Preguntas frecuentes</li>
+      </ul>
+    </div>
+
+    <!-- 🔹 BLOQUE CORRECTO DE REDES + CONTACTO -->
+    <div class="footer-red  social">
+      <h6>Síguenos</h6>
+
+      <div class="social-icons">
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-twitter-x"></i></a>
+        <a href="#"><i class="bi bi-youtube"></i></a>
+      </div>
+
+      <div class="contact-info">
+        <p>contacto@proactiveclub.com</p>
+        <p>01 800 456 789</p>
+      </div>
+    </div>
+
+  </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
