Se corrigen errores, modifican precios y se linkean secciones con navegador

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Únete al Club</a>
+              <a class="nav-link" href="#pricing-section">Únete al Club</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Social</a>
+              <a class="nav-link" href="#opiniones-social">Social</a>
             </li>
 
             <li class="nav-item">
@@ -226,7 +226,7 @@
             Alimentación personalizada para tus objetivos
           </p>
           <div>
-            <span class="pricing-amount">$29</span>
+            <span class="pricing-amount">$290</span>
             <span class="pricing-period">/ mes</span>
           </div>
           <p class="pricing-features-title">Incluye:</p>
@@ -249,7 +249,7 @@
           <h2 class="pricing-card-title">Plan Entrenamiento</h2>
           <p class="pricing-card-subtitle">Rutinas diseñadas por expertos</p>
           <div>
-            <span class="pricing-amount">$39</span>
+            <span class="pricing-amount">$390</span>
             <span class="pricing-period">/ mes</span>
           </div>
           <p class="pricing-features-title">Incluye:</p>
@@ -273,7 +273,7 @@
           <h2 class="pricing-card-title">Plan Completo</h2>
           <p class="pricing-card-subtitle">Nutrición + Entrenamiento</p>
           <div>
-            <span class="pricing-amount">$59</span>
+            <span class="pricing-amount">$590</span>
             <span class="pricing-period">/ mes</span>
           </div>
           <p class="pricing-features-title">Incluye:</p>
@@ -298,7 +298,7 @@
             Experiencia completa con instalaciones
           </p>
           <div>
-            <span class="pricing-amount">$89</span>
+            <span class="pricing-amount">$890</span>
             <span class="pricing-period">/ mes</span>
           </div>
           <p class="pricing-features-title">Incluye:</p>
